[metadata]
name = nlm2obsidian
version = 0.1.0
description = Import NotebookLM content into an Obsidian vault

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
install_requires =
    click>=8.0
    notebooklm-py>=0.1.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    nlm2obsidian = nlm2obsidian.cli:main
